[workspace]
members = [
    "holodeck",
    "actix_web-async_graphql_rbatis/backend",
    "actix_web-async_graphql_rbatis/frontend-handlebars",
    "actix_web-async_graphql_rbatis/frontend-wasm",
    "actix_web-dissel-sqlite",
    "simple-auth-server",
    "yew-tutorial",
    "news/service",
    "news/contract",
    "news/dao",
    "news/migrations",
    "tonic-example"
]
default-members = [
    "news/service"
]

resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"
