[workspace]
members = [
    "holodeck",
    "actix_web-async_graphql_rbatis/backend",
    "actix_web-async_graphql_rbatis/frontend-handlebars",
    "actix_web-async_graphql_rbatis/frontend-yew",
    "actix_web-dissel-sqlite",
    "simple-auth-server",
    "yew-tutorial",
    "news/service",
    "news/contract",
    "news/dao",
    "news/migrations",
    "tonic-example",
    "solar-system/rpc",
    "solar-system/server",
    "docker-simple",
    "actix-example",
    "rocket-tutorial",
    "actix-mongodb",
    "file-upload-download",
    "misc",
]
default-members = [
    "news/service"
]

[profile.dev]
split-debuginfo = "unpacked"
