[package]
name = "actix-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-identity = "0.3.1"
actix-multipart = "0.3.0"
actix-session = "0.4.1"
actix-web = { version = "3.3.2", features = ["openssl"] }
clap = "2.33.3"
env_logger = "0.8.3"
futures = "0.3.15"
rand = "0.8.3"
sanitize-filename = "0.3.0"
url = "2.2.2"
