[package]
name = "actix-mongodb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
dotenv = "0.15.0"
futures = "0.3.15"
mongodb = "2.0.0-beta.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
