[package]
name = "file-upload-download"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
futures = { version = "0.3.15", default-features = false }
tokio = { version = "1.7.1", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }
warp = "0.3.1"
