[package]
name = "mongodb-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.12"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
mime = "0.3.16"
mongodb = "2.0.2"
redis = { version = "0.21.4", features = ["tokio-comp", "connection-manager"] }
rust-embed = "6.3.0"
serde = "1.0.130"
serde_json = "1.0.72"
tokio = "1.14.0"
tokio-stream = "0.1.8"
