[package]
name = "news-contract"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
diesel = { version = "1.4.6", features = ["postgres", "uuidv07"] }
uuid = { version = "0.8.2", features=["serde","v4"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
