[package]
name = "news-migrations"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
news-contract = { path = "../news-contract" }
async-std = { version = "1.9.0", features = ["attributes"] }
barrel = { version = "0.6.5", features = ["pg"] }
sqlx = { version = "0.5.2", features = ["postgres", "runtime-async-std-rustls"] }
