[package]
name = "sea-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-query = "0.11.0"
sqlx = { version = "0.5.2", features = ["postgres", "runtime-async-std-rustls"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

actix-web = "3.3.2"

serde = { version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"

dotenv = "0.15.0"
lazy_static = "1.4.0"
env_logger = "0.8.3"
log = "0.4.14"
