[package]
name = "sas"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.3.1"
actix-rt = "2.2.0"
actix-web = "3.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.13"
diesel = { version = "1.4.6", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.15"
lazy_static = "1.4.0"
r2d2 = "0.8.9"
rust-argon2 = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1.0.64"
sparkpost = "0.5.4"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
lettre = "0.9"
lettre_email = "0.9"
ring = "0.16.20"
