[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0"
dotenv_codegen = "0"

teloxide = { version = "0", features = ["frunk", "macros", "auto-send"] }

log = "0"
pretty_env_logger = "0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

