[package]
name = "tonic-example"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
prost = "0.7.0"
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.4.3"

[build-dependencies]
tonic-build = "0.4.2"
