[package]
name = "tonic-example"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[[bin]]
name = "routeguide-server"
path = "src/routeguide/server.rs"

[[bin]]
name = "routeguide-client"
path = "src/routeguide/client.rs"

[[bin]]
name = "authentication-server"
path = "src/authentication/server.rs"

[[bin]]
name = "authentication-client"
path = "src/authentication/client.rs"

[dependencies]
# 基础依赖
prost = "0.7.0"
tonic = "0.4.3"
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread", "sync", "time"] }

# 流式 rpc 依赖
async-stream = "0.3.2"
futures = { version = "0.3.15", features = ["alloc"] }
futures-core = "0.3.15"
futures-util = "0.3.15"
tokio-stream = "0.1.6"

# 数据相关依赖
rand = "0.8.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[build-dependencies]
tonic-build = "0.4.2"
