[package]
name = "ads"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.6", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
failure = "0.1.8"
futures = "0.3.14"
r2d2 = "0.8.9"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
