[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.4"
axum-extra = { version = "0.3.0", features = ["spa"] }
clap = { version = "3.1.16", features = ["derive"] }
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.1", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.3.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
