[package]
name = "service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { path = "../contract" }
dao = { path = "../dao" }
actix = "0.11.1"
actix-web = "3.3.2"
env_logger = "0.8.3"
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
